<FrameLayout 
    android:id="@+id/fragment_principal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhonny.infocar.PoliticaFragment">
    
    <ImageView
        android:id="@+id/fondo_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo1" />
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

		<ScrollView
			android:id="@+id/poli_scrollView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:layout_marginBottom="100dp">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="10dp">

					<TextView
						android:id="@+id/textView1"
						android:layout_width="wrap_content"
						android:layout_height="25dp"
						android:text="@string/label_politica" />

					<TextView
						android:id="@+id/poli_textView2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/label_politica_contenido_1" />

				</LinearLayout>

				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="10dp">

					<TextView
						android:id="@+id/textView3"
						android:layout_width="wrap_content"
						android:layout_height="25dp"
						android:text="@string/label_politica_mod" />

					<TextView
						android:id="@+id/poli_textView4"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/label_politica_contenido_2" />

				</LinearLayout>

			</LinearLayout>

		</ScrollView>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="50dp"
			android:layout_alignParentStart="false"
			android:layout_alignParentBottom="true">

			<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/label_volver"
				android:id="@+id/botonVolver" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/linearLayout2"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_alignParentBottom="true"
			android:orientation="vertical"
			android:weightSum="1">
		</LinearLayout>

	</RelativeLayout>

</FrameLayout>