<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_nuevo_seguro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhonny.infocar.fragments.NuevoSeguroFragment" >

    <ImageView
        android:id="@+id/fondo_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fondo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_fecha"
                android:textStyle="bold"
                android:textSize="@dimen/fuente_size"
                android:textColor="@color/blanco" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_seguro_fecha"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="date"/>

            <ImageView
                android:id="@+id/nue_seg_imageView1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/im_calendario" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_compania"
                android:textStyle="bold"
                android:textSize="@dimen/fuente_size"
                android:textColor="@color/blanco" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_seguro_compania"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_tipo_segu"
                android:textStyle="bold"
                android:textSize="@dimen/fuente_size"
                android:textColor="@color/blanco" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_seguro_tipo"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_poliza"
                android:textStyle="bold"
                android:textSize="@dimen/fuente_size"
                android:textColor="@color/blanco" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_seguro_poliza"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/label_alerta"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:id="@+id/seguro_switch1"
                android:textOn="@string/label_si"
                android:textOff="@string/label_no"
                android:layout_marginLeft="10dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_gravity="bottom" />

</FrameLayout>
