<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhonny.infocar.fragments.DatosFragment" >

    <ImageView
        android:id="@+id/fondo_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fondo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/datos_editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lbl_nombre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/datos_editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone"
                android:hint="@string/lbl_telefono" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <EditText
                android:id="@+id/datos_editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/lbl_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical" >

            <Spinner
                android:id="@+id/datos_spinner1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:clickable="true"
            android:dividerPadding="5dp"
            android:measureWithLargestChild="false"
            android:nestedScrollingEnabled="false"
            android:showDividers="middle"
            android:gravity="center"
            android:touchscreenBlocksFocus="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bordes_layout"
                android:id="@+id/linearLayout_hombre">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="40dp"
                    android:text="@string/sexo_hombre"
                    android:id="@+id/textView34"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/negro" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bordes_layout"
                android:id="@+id/linearLayout_mujer">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="40dp"
                    android:text="@string/sexo_mujer"
                    android:id="@+id/textView35"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/negro" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/boton_guardar_desp"
            android:id="@+id/botonVolver" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1" >

    </LinearLayout>

</FrameLayout>
