<FrameLayout 
    android:id="@+id/fragment_nuevo_accidente"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhonny.infocar.fragments.NuevoAccidenteFragment" >
    
    <ImageView
        android:id="@+id/fondo_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fondo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_fecha"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/nue_rep_edit_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:editable="false">

            </EditText>

            <ImageView
                android:id="@+id/nue_rep_imageView1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/im_calendario" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_kilometros"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/nue_rep_edit_kms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_precio"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/nue_rep_edit_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_taller"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/nue_rep_edit_taller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/label_tipo_repa"
                android:textColor="@color/blanco" />

            <Spinner
                android:id="@+id/nue_rep_spinner_tipo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/label_vehiculo"
                android:textColor="@color/blanco" />

            <Spinner
                android:id="@+id/nue_rep_spinner_vehiculo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_observaciones"
                android:textColor="@color/blanco" />

            <EditText
                android:id="@+id/nue_rep_edit_obs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical" >

    </LinearLayout>
	
</FrameLayout>